<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:fontFamily="@font/ubuntu_bold"
                android:layout_marginStart="@dimen/_7sdp"
                android:textColor="@android:color/white"
                android:layout_marginVertical="@dimen/_12sdp"
                android:textSize="@dimen/_16ssp"/>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/switchBar"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_40sdp"
                app:lottie_rawRes="@raw/switchbar"
                app:lottie_progress="0"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/logout"/>

            <ImageView
                android:id="@+id/logout"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:scaleType="fitCenter"
                android:layout_margin="@dimen/_5sdp"
                android:src="@drawable/ic_logout"
                android:contentDescription="@string/logout" />
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBar" >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewRecordings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <LinearLayout
        android:id="@+id/warningLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:id="@+id/infoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_user_found"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/ubuntu_regular"
            android:layout_gravity="center"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/noAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_account"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</RelativeLayout>