<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loginDialogContainer"
    android:backgroundTint="@android:color/white"
    android:layout_margin="@dimen/_20sdp"
    tools:targetApi="lollipop"
    app:cardCornerRadius="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/login_in"
            android:background="@drawable/dialog_header"
            android:gravity="center"
            android:textSize="@dimen/_16ssp"
            android:textColor="@android:color/white"
            android:fontFamily="@font/ubuntu_bold"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:background="@null"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="textEmailAddress"
            android:textColor="@color/textColor"
            android:textColorHint="@color/hintColor"
            android:textSize="@dimen/_13ssp"
            android:layout_marginTop="@dimen/_10sdp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/dividerColor"
            android:layout_marginHorizontal="@dimen/_5sdp"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:background="@null"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:textColor="@color/textColor"
            android:textColorHint="@color/hintColor"
            android:textSize="@dimen/_13ssp"
            android:layout_marginTop="@dimen/_10sdp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/dividerColor"
            android:layout_marginHorizontal="@dimen/_5sdp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/CancelButtonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:gravity="center"
                android:fontFamily="@font/ubuntu_bold"
                android:textSize="@dimen/_12ssp"
                android:padding="@dimen/_5sdp"
                android:layout_marginVertical="@dimen/_10sdp"
                android:textColor="@color/colorPrimary"
                android:layout_weight="1"/>
            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:background="@color/dividerColor"
                android:layout_marginVertical="@dimen/_5sdp"/>
            <TextView
                android:id="@+id/loginButtonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_in"
                android:gravity="center"
                android:fontFamily="@font/ubuntu_bold"
                android:textSize="@dimen/_12ssp"
                android:padding="@dimen/_5sdp"
                android:layout_marginVertical="@dimen/_10sdp"
                android:textColor="@color/colorPrimary"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>